--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^3.3.0",
     "node-sass": "^4.5.2",
     "react-hot-loader": "^1.3.1",
+    "relay-compiler-webpack-plugin": "^0.2.3",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
@@ -59,12 +60,14 @@
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
     "express": "^4.15.2",
+    "global": "^4.3.2",
     "postgraphql": "^3.2.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-relay": "^1.0.0-rc.4",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "relay-compiler": "dev"
   }
 }
